--- a/baraholka/templates/index.html
+++ b/baraholka/templates/index.html
@@ -1,13 +1,81 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>FlaskApp</title>
-</head>
-<body>
-    <h1>Hello World!</h1>
-    <h2>Welcome to FlaskApp!</h2>
-	<p><a href=/profile/> Профиль </a></p>
+{% extends "bootstrap/base.html" %}
 
-</body>
-</html>
+{% block metas %}
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+{% endblock %}
+{% block styles %}
+    {{super()}}
+    <link rel="stylesheet" href="{{url_for('.static', filename='index/assets/bootstrap/css/bootstrap.min.css')}}">
+    <link rel="stylesheet" href="{{url_for('.static', filename='index/assets/css/Footer-Basic-Footer-Basic.css')}}">
+    <link rel="stylesheet" href="{{url_for('.static', filename='index/assets/css/Navigation-with-Search-Navigation-with-Search.css')}}">
+    <link rel="stylesheet" href="{{url_for('.static', filename='index/assets/css/untitled-2.css')}}">
+    <link rel="stylesheet" href="{{url_for('.static', filename='index/assets/css/untitled-3.css')}}">
+    <link rel="stylesheet" href="{{url_for('.static', filename='index/assets/css/untitled.css')}}">
+{% endblock %}
+{% block scripts %}
+    <script src="{{url_for('.static', filename='index/assets/js/jquery.min.js')}}"></script>
+    <script src="{{url_for('.static', filename='index/assets/bootstrap/js/bootstrap.min.js')}}"></script>
+    {{super()}}
+{% endblock %}
+
+{% block html_attribs %} lang="en" {% endblock %}
+
+
+
+
+    {% block title %}main{% endblock %}
+
+
+
+
+
+
+
+
+{% block content %}
+    <div style="background: #bed9e4;">
+        <div class="container" style="padding-left: 0px;padding-right: 0px;width: 1150px;">
+            <div class="row" style="margin-left: 0px;margin-right: 0px;">
+                <div class="col-lg-12 col-md-12" style="padding-left: 0px;padding-right: 0px;"><a href="/" style="padding-bottom: 0px;padding-top: 0px;margin-left: 0px;display: inline-block;"><img style="height: 64px;width: 170px;margin-left: 0px;display: inline-block;" src="{{url_for('.static', filename='index/assets/img/test.png')}}"></a><a class="btn btn-default barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 20px;" href="#">Категории</a>
+                    <form class="form-inline" target="_self" style="background: #ffffff;border-radius: 99px;padding-right: 0px;padding-left: 0px;display: inline-block;height: 38px;margin-left: 20px;"><button class="btn btn-default barahloka-btn" type="submit" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 99px;border-style: none;text-shadow: 0px 0px;margin-right: 6px;padding-top: 7px;padding-bottom: 7px;padding-left: 15px;padding-right: 14px;margin-left: 0px;display: inline-block;"><img style="width: 23px;height: 23px;display: inline-block;" src="{{url_for('.static', filename='index/assets/img/search-icon.png')}}"></button><input class="form-control search-field" type="search" id="search-field-2" name="search" style="width: 330px;border-radius: 99px;box-shadow: 0px 0px rgba(255,255,255,0);margin-left: 0px;font-size: 16px;height: 38px;border: 1px none rgb(180,180,180);display: inline-block;"></form>
+                    {% if current_user.is_authenticated %} <a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;margin-right: 0px;display: inline-block;margin-left: 100px;" href="/login">Создать объявление</a> {% endif %}
+                    <a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: {% if current_user.is_authenticated %}20{% else %}314{% endif %}px;" href="/login">{% if current_user.is_authenticated %}Профиль{% else %}Войти{% endif %}</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div style="margin-top: 23px;">
+        <div class="container" style="padding-right: 0px;padding-left: 0px;min-height: 1200px;width: 900px;">
+            {% for row in advertsGrid %}
+            <div class="row" style="margin-left: 0px;margin-right: 0px;">
+                {% for advert in row %}
+                <div class="col-xs-4" style="height: 300px;padding-top: 15px;padding-bottom: 15px;width: 300px;border: 1px solid #e6e6e6;">
+                    <div class="text-center" style="max-height: 185px;"><a href="#"><img style="width: 270px;max-width: 270px;max-height: 185px;height: 185px;border: 1px solid #dadada ;" src="{{advert.imagePath}}"></a></div>
+                    <div style="height: 45px;max-height: 45px;"><a href="#" style="color: rgb(0,0,0);font-size: 16px;">
+                            <p style="font-size: 16px;max-height: 45px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;line-clamp: 2;-webkit-box-orient: vertical;margin-bottom: 0px;margin-top: 7px;height: 45px;/*color: rgb(0, 0, 0);*/">{{advert.name}}</p>
+                        </a>
+                        <p style="font-size: 16px;max-height: 23px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;line-clamp: 2;-webkit-box-orient: vertical;margin-bottom: 0px;height: 23px;font-weight: bold;margin-top: 7px;">{{advert.price}} ₽</p>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+    <div class="text-center">
+        <nav>
+            <ul class="pagination">
+                {% for pageButton in pageButtons %}
+                <li class="{{pageButton.state}}"><a {{pageButton.a}}>{{pageButton.symbol}}</a></li>
+                {% endfor %}
+            </ul>
+        </nav>
+    </div>
+    <footer class="text-center" style="background: #bed9e4;padding-top: 10px;padding-bottom: 10px;">
+        <p style="margin-bottom: 0px;margin-top: 0px;font-size: 15px;">Baraholka 2022</p>
+    </footer>
+
+
+{% endblock %}
+
