--- a/baraholka/templates/profile.html
+++ b/baraholka/templates/profile.html
@@ -13,6 +13,7 @@
 <p> Фамилия: {{user.lastname}}</p>
 <p> Email: {{user.email}}</p>
 <p> Номер телефона: {{user.phone}}</p>
+<p> Количество созданных объявлений: {{advCount}}</p>
 {% if user.moderator %}
 <p> Ты модератор!<p>
 {% endif %}
