--- a/baraholka/templates/newAdvert.html
+++ b/baraholka/templates/newAdvert.html
@@ -40,7 +40,7 @@
     <div style="margin-top: 0px;padding-top: 75px;">
         <section class="login-clean" style="background: rgb(255,255,255);padding-top: 0px;padding-bottom: 75px;">
             <form method="post" enctype = "multipart/form-data" style="box-shadow: 0px 0px 8px rgba(80,94,108,0.59);max-width: 1000px;width: 1000px;">
-                <div class="illustration" style="margin-top: 0px;font-size: 14px;margin-bottom: 20px;padding-bottom: 0px;"><a href="/" style="padding-bottom: 0px;padding-top: 0px;margin-left: 0px;display: inline-block;font-size: 14px;"><img style="height: 64px;width: 170px;margin-left: 0px;display: inline-block;margin-bottom: 0px;" src="{{url_for('.static', filename='new_adv/img/test.png')}}"></a></div>
+                <div class="illustration" style="margin-top: 0px;font-size: 14px;margin-bottom: 20px;padding-bottom: 0px;"><a href="/" style="padding-bottom: 0px;padding-top: 0px;margin-left: 0px;display: inline-block;font-size: 14px;"><img style="height: 64px;width: 170px;margin-left: 0px;display: inline-block;margin-bottom: 0px;" src="{{url_for('.static', filename='new_adv/img/baraholkaBlack.png')}}"></a></div>
                 <div class="form-group"><input class="form-control" type="text" name="name" placeholder="Название" style="font-size: 16px;background: #efefef;" required></div>
                 <div class="form-group"><textarea class="form-control" style="font-size: 16px;background: #efefef;color: rgb(80, 94, 108);height: 125px;max-width: 920px;" placeholder="Описание" name="description"></textarea></div>
                 <div class="form-group"><input class="form-control" type="text" name="address" placeholder="Адрес" style="font-size: 16px;background: #efefef;width: 475px;display: inline-block;" required>
