--- a/baraholka/templates/profile.html
+++ b/baraholka/templates/profile.html
@@ -1,27 +1,68 @@
 {% extends "bootstrap/base.html" %}
 
-{% block html_attribs %} lang="en" {% endblock %}
-
 {% block metas %}
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+{% endblock %}
+{% block styles %}
+    {{super()}}
+    <link rel="stylesheet" href="{{url_for('.static', filename='profile/assets/bootstrap/css/bootstrap.min.css')}}">
+    <link rel="stylesheet" href="{{url_for('.static', filename='profile/assets/css/Contact-Form-Clean-Contact-Form-Clean.css')}}">
+    <link rel="stylesheet" href="{{url_for('.static', filename='profile/assets/css/Footer-Basic-Footer-Basic.css')}}">
+    <link rel="stylesheet" href="{{url_for('.static', filename='profile/assets/css/Login-Form-Clean-Login-Form-Clean.css')}}">
+    <link rel="stylesheet" href="{{url_for('.static', filename='profile/assets/css/Navigation-with-Search-Navigation-with-Search.css')}}">
+    <link rel="stylesheet" href="{{url_for('.static', filename='profile/assets/css/untitled-2.css')}}">
+    <link rel="stylesheet" href="{{url_for('.static', filename='profile/assets/css/untitled-3.css')}}">
+    <link rel="stylesheet" href="{{url_for('.static', filename='profile/assets/css/untitled.css')}}">
+{% endblock %}
+{% block scripts %}
+    <script src="{{url_for('.static', filename='profile/assets/js/jquery.min.js')}}"></script>
+    <script src="{{url_for('.static', filename='profile/assets/bootstrap/js/bootstrap.min.js')}}"></script>
+    {{super()}}
 {% endblock %}
 
+{% block html_attribs %} lang="en" {% endblock %}
+
+
+
+
+    {% block title %}profile{% endblock %}
+
+
+
+
+
+
+
+
+
+
 {% block content %}
-<h2> Ну это типа твой профиль кароче</h2>
-<br>
-<p> Имя: {{user.firstname}}</p>
-<p> Фамилия: {{user.lastname}}</p>
-<p> Email: {{user.email}}</p>
-<p> Номер телефона: {{user.phone}}</p>
-<p> Количество созданных объявлений: {{advCount}}</p>
-{% if user.moderator %}
-<p> Ты модератор!<p>
-{% endif %}
-<p>
-    <form method="post">
-        <div><button type="submit" name="logout">Разлогиниться</button></div>
-    </form>
-</p>
-<br>
-<a href="/">На главную</a>
+    <div style="margin-top: 0px;padding-top: 75px;">
+        <section class="login-clean" style="background: rgb(255,255,255);padding-top: 0px;padding-bottom: 75px;">
+            <form method="post" style="box-shadow: 0px 0px 8px rgba(80,94,108,0.59);max-width: 1000px;width: 600px;" enctype="multipart/form-data">
+                <div class="illustration" style="margin-top: 0px;font-size: 14px;margin-bottom: 20px;padding-bottom: 0px;"><a href="/" style="padding-bottom: 0px;padding-top: 0px;margin-left: 0px;display: inline-block;font-size: 14px;"><img style="height: 64px;width: 170px;margin-left: 0px;display: inline-block;margin-bottom: 0px;" src="{{url_for('.static', filename='profile/assets/img/baraholkaBlack.png')}}"></a></div>
+                <div class="form-group" style="margin-bottom: 0px;">
+                    <p style="font-size: 18px;color: rgb(0,0,0);display: inline-block;margin-right: 10px;font-weight: bold;">Имя:</p>
+                    <p style="font-size: 18px;color: rgb(0,0,0);display: inline-block;">{{user.firstname}}</p>
+                </div>
+                <div class="form-group" style="margin-bottom: 0px;">
+                    <p style="font-size: 18px;color: rgb(0,0,0);display: inline-block;margin-right: 10px;font-weight: bold;">Фамилия:</p>
+                    <p style="font-size: 18px;color: rgb(0,0,0);display: inline-block;">{{user.lastname}}</p>
+                </div>
+                <div class="form-group" style="margin-bottom: 0px;">
+                    <p style="font-size: 18px;color: rgb(0,0,0);display: inline-block;margin-right: 10px;font-weight: bold;">Email:</p>
+                    <p style="font-size: 18px;color: rgb(0,0,0);display: inline-block;">{{user.email}}</p>
+                </div>
+                <div class="form-group" style="margin-bottom: 0px;">
+                    <p style="font-size: 18px;color: rgb(0,0,0);display: inline-block;margin-right: 10px;font-weight: bold;">Номер телефона:</p>
+                    <p style="font-size: 18px;color: rgb(0,0,0);display: inline-block;">{{user.phone}}</p>
+                </div>
+                <div class="form-group text-center"><button class="btn btn-default barahloka-btn" type="submit" name="logout" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 0px;">Выйти</button><a class="btn btn-default barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 64px;" href="/myadverts/">Мои объявления</a></div>
+            </form>
+        </section>
+    </div>
+
+
 {% endblock %}
+
