--- a/baraholka/templates/register.html
+++ b/baraholka/templates/register.html
@@ -39,7 +39,7 @@
     <div style="margin-top: 0px;padding-top: 75px;">
         <section class="login-clean" style="background: rgb(255,255,255);padding-top: 0px;padding-bottom: 75px;">
             <form method="post" oninput='password2.setCustomValidity(password2.value != password.value ? "Пароли не совпадают" : ""); phone.setCustomValidity(/^\+?[0-9]{11}$/.test(phone.value) ? "" : "Укажите телефон в формате +79876543210 или 89876543210" )' style="box-shadow: 0px 0px 8px rgba(80,94,108,0.59);">
-                <div class="illustration" style="margin-top: 0px;font-size: 14px;margin-bottom: 20px;padding-bottom: 0px;"><a href="/" style="padding-bottom: 0px;padding-top: 0px;margin-left: 0px;display: inline-block;font-size: 14px;"><img style="height: 64px;width: 170px;margin-left: 0px;display: inline-block;margin-bottom: 20px;" src="{{url_for('.static', filename='login/assets/img/test.png')}}"></a>
+                <div class="illustration" style="margin-top: 0px;font-size: 14px;margin-bottom: 20px;padding-bottom: 0px;"><a href="/" style="padding-bottom: 0px;padding-top: 0px;margin-left: 0px;display: inline-block;font-size: 14px;"><img style="height: 64px;width: 170px;margin-left: 0px;display: inline-block;margin-bottom: 20px;" src="{{url_for('.static', filename='login/assets/img/baraholkaBlack.png')}}"></a>
                     <p style="color: rgb(255,255,255);background: #ff3030;font-size: 16px;">{{errorMsg}}</p>
                 </div>
                 <div class="form-group"><input class="form-control" type="text" name="firstname" placeholder="Имя" value="{{prefilledFirstname}}" style="font-size: 16px;background: #efefef;" required></div>
