Страница 'мои объявления', мелкие доработки

--- a/baraholka/templates/newAdvert.html
+++ b/baraholka/templates/newAdvert.html
@@ -48,7 +48,7 @@
                         <option value="1" selected="">Категория 1</option>
                         <option value="2">Категория 2</option>
                         <option value="3">Категория 3</option>
-                    </select><input class="form-control" type="number" name="price" placeholder="Цена" style="font-size: 16px;background: #efefef;width: 175px;display: inline-block;margin-left: 25px;" min="0" required></div>
+                    </select><input class="form-control" type="number" name="price" placeholder="Цена" style="font-size: 16px;background: #efefef;width: 175px;display: inline-block;margin-left: 25px;" min="0"></div>
                 <div class="form-group">
                     <p style="font-size: 16px;color: rgb(0,0,0);display: inline-block;">Загрузите фотографии:</p><input type="file" name="file" style="font-size: 16px;background: #efefef;padding-left: 10px;padding-top: 10px;padding-bottom: 10px;padding-right: 10px;display: inline-block;width: 723px;margin-left: 13px;" multiple="">
                 </div>
