--- a/baraholka/templates/index.html
+++ b/baraholka/templates/index.html
@@ -34,45 +34,49 @@
 
 
 {% block content %}
-    <div style="background: #bed9e4;">
-        <div class="container" style="padding-left: 0px;padding-right: 0px;width: 1150px;">
-            <div class="row" style="margin-left: 0px;margin-right: 0px;">
-                <div class="col-lg-12 col-md-12" style="padding-left: 0px;padding-right: 0px;"><a href="/" style="padding-bottom: 0px;padding-top: 0px;margin-left: 0px;display: inline-block;"><img style="height: 64px;width: 170px;margin-left: 0px;display: inline-block;" src="{{url_for('.static', filename='index/assets/img/baraholkaBlack.png')}}"></a><a class="btn btn-default barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 20px;" href="#">Категории</a>
-                    <form class="form-inline" target="_self" style="background: #ffffff;border-radius: 99px;padding-right: 0px;padding-left: 0px;display: inline-block;height: 38px;margin-left: 20px;"><button class="btn btn-default barahloka-btn" type="submit" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 99px;border-style: none;text-shadow: 0px 0px;margin-right: 6px;padding-top: 7px;padding-bottom: 7px;padding-left: 15px;padding-right: 14px;margin-left: 0px;display: inline-block;"><img style="width: 23px;height: 23px;display: inline-block;" src="{{url_for('.static', filename='index/assets/img/search-icon.png')}}"></button><input class="form-control search-field" type="search" id="search-field-2" name="search" style="width: 330px;border-radius: 99px;box-shadow: 0px 0px rgba(255,255,255,0);margin-left: 0px;font-size: 16px;height: 38px;border: 1px none rgb(180,180,180);display: inline-block;"></form>
-                    {% if current_user.is_authenticated %} <a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;margin-right: 0px;display: inline-block;margin-left: 100px;" href="/newadvert">Создать объявление</a> {% endif %}
-                    <a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: {% if current_user.is_authenticated %}20{% else %}314{% endif %}px;" href="/login">{% if current_user.is_authenticated %}Профиль{% else %}Войти{% endif %}</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div style="margin-top: 23px;">
-        <div class="container" style="padding-right: 0px;padding-left: 0px;min-height: 1200px;width: 900px;">
-            {% for row in advertsGrid %}
-            <div class="row" style="margin-left: 0px;margin-right: 0px;">
-                {% for advert in row %}
-                <div class="col-xs-4" style="height: 300px;padding-top: 15px;padding-bottom: 15px;width: 300px;border: 1px solid #e6e6e6;">
-                    <div class="text-center" style="max-height: 185px;height: 185px;"><a href="#"><img style="width: {{advert.imageW}}px;max-width: 270px;max-height: {{advert.imageH}}px;height: 185px;border: 1px solid #dadada ;" src="{{advert.imagePath}}"></a></div>
-                    <div style="height: 45px;max-height: 45px;"><a href="#" style="color: rgb(0,0,0);font-size: 16px;">
-                            <p style="font-size: 16px;max-height: 45px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;line-clamp: 2;-webkit-box-orient: vertical;margin-bottom: 0px;margin-top: 7px;height: 45px;/*color: rgb(0, 0, 0);*/">{{advert.name}}</p>
-                        </a>
-                        <p style="font-size: 16px;max-height: 23px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;line-clamp: 2;-webkit-box-orient: vertical;margin-bottom: 0px;height: 23px;font-weight: bold;margin-top: 7px;">{{advert.price}} ₽</p>
+    <div style="background: #eeeeee;">
+        <div style="background: #ffffff;box-shadow: 0px 0px 10px 0px rgba(80,94,108,0.71);margin-bottom: 1px;">
+            <div class="container" style="padding-left: 0px;padding-right: 0px;width: 1000px;">
+                <div class="row" style="margin-left: 0px;margin-right: 0px;">
+                    <div class="col-lg-12 col-md-12" style="padding-left: 0px;padding-right: 0px;margin-bottom: 0px;"><a href="/" style="padding-bottom: 0px;padding-top: 0px;margin-left: 0px;display: inline-block;"><img style="height: 64px;width: 170px;margin-left: 0px;display: inline-block;" src="{{url_for('.static', filename='index/assets/img/baraholkaBlack.png')}}"></a><a class="btn btn-default barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 12px;" href="#">Категории</a>
+                        <form class="form-inline" target="_self" style="background: rgba(255,255,255,0);padding-right: 0px;padding-left: 0px;display: inline-block;height: 38px;margin-left: 15px;padding-top: 0px;">
+                            <div class="form-group" style="background: #e3e3e3;border-radius: 99px;border: 2px none #eeeeee;"><button class="btn btn-default barahloka-btn" type="submit" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 99px;border-style: none;text-shadow: 0px 0px;margin-right: 6px;padding-top: 7px;padding-bottom: 7px;padding-left: 15px;padding-right: 14px;margin-left: 0px;display: inline-block;"><img style="width: 23px;height: 23px;display: inline-block;" src="{{url_for('.static', filename='index/assets/img/search-icon.png')}}"></button><input class="form-control search-field" type="search" id="search-field-2" name="search" style="width: 275px;border-radius: 99px;box-shadow: 0px 0px rgba(255,255,255,0);margin-left: 0px;font-size: 16px;height: 38px;display: inline-block;background: #e3e3e3;border-style: none;border-color: #eeeeee;"></div>
+                        </form> {% if current_user.is_authenticated %} <a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;margin-right: -2px;display: inline-block;margin-left: 32px;" href="/newadvert/">Создать объявление</a> {% endif %} <a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: {% if current_user.is_authenticated %}20{% else %}246{% endif %}px;" href="/login">{% if current_user.is_authenticated %}Профиль{% else %}Войти{% endif %}</a>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div style="padding-top: 0px;background: rgba(211,211,211,0);margin-top: 25px;">
+            <div class="container" style="padding-right: 0px;padding-left: 0px;width: 900px;">
+                {% for row in advertsGrid %}
+                <div class="row" style="margin-left: 0px;margin-right: 0px;">
+                    {% for advert in row %}
+                    <div class="col-xs-4" style="height: 300px;padding-top: 15px;padding-bottom: 15px;width: 300px;border: 1px solid #e6e6e6;background: #ffffff;">
+                        <div class="text-center" style="max-height: 185px;height: 185px;"><a href="#">
+                                <img style="width: {{advert.imageW}}px;max-width: 270px;max-height: 185px;height: {{advert.imageH}}px;border: 1px solid #dadada ;" src="{{advert.imagePath}}" width="270" height="185">
+                        </a></div>
+                        <div style="height: 45px;max-height: 45px;"><a href="#" style="color: rgb(0,0,0);font-size: 16px;">
+                                <p style="font-size: 16px;max-height: 45px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;line-clamp: 2;-webkit-box-orient: vertical;margin-bottom: 0px;margin-top: 7px;height: 45px;/*color: rgb(0, 0, 0);*/">{{advert.name}}</p>
+                            </a>
+                            <p style="font-size: 16px;max-height: 23px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;line-clamp: 2;-webkit-box-orient: vertical;margin-bottom: 0px;height: 23px;font-weight: bold;margin-top: 7px;">{{advert.price}}</p>
+                        </div>
+                    </div>
+                    {% endfor %}
+                </div>
                 {% endfor %}
             </div>
-            {% endfor %}
+        </div>
+        <div class="text-center">
+            <nav>
+                <ul class="pagination">
+                    {% for pageButton in pageButtons %}
+                    <li class="{{pageButton.state}}"><a {{pageButton.href}}>{{pageButton.symbol}}</a></li>
+                    {% endfor %}
+                </ul>
+            </nav>
         </div>
     </div>
-    <div class="text-center">
-        <nav>
-            <ul class="pagination">
-                {% for pageButton in pageButtons %}
-                <li class="{{pageButton.state}}"><a {{pageButton.a}}>{{pageButton.symbol}}</a></li>
-                {% endfor %}
-            </ul>
-        </nav>
-    </div>
-    <footer class="text-center" style="background: #bed9e4;padding-top: 10px;padding-bottom: 10px;">
+    <footer class="text-center" style="background: #ffffff;padding-top: 10px;padding-bottom: 10px;">
         <p style="margin-bottom: 0px;margin-top: 0px;font-size: 15px;">Baraholka 2022</p>
     </footer>
 
