--- a/baraholka/templates/index.html
+++ b/baraholka/templates/index.html
@@ -66,11 +66,11 @@
                 <div class="row" style="margin-left: 0px;margin-right: 0px;">
                     {% for advert in row %}
                     <div class="col-xs-4" style="height: 300px;padding-top: 15px;padding-bottom: 15px;width: 300px;border: 1px solid #e6e6e6;background: #ffffff;">
-                        <div class="text-center" style="max-height: 185px;height: 185px;"><a href="#">
-                                <img style="width: {{advert.imageW}}px;max-width: 270px;max-height: 185px;height: {{advert.imageH}}px;border: 0px solid #dadada ;" src="{{advert.imagePath}}" width="270" height="185">
+                        <div class="text-center" style="max-height: 185px;height: 185px;"><a href="{{advert.link}}">
+                                <img style="width: {{advert.image.w}}px;max-width: 270px;max-height: 185px;height: {{advert.image.h}}px;border: 0px solid #dadada ;" src="{{advert.image.path}}" width="270" height="185">
                         </a></div>
-                        <div style="height: 45px;max-height: 45px;"><a href="#" style="color: rgb(0,0,0);font-size: 16px;">
-                                <p style="font-size: 16px;max-height: 45px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;line-clamp: 2;-webkit-box-orient: vertical;margin-bottom: 0px;margin-top: 7px;height: 45px;/*color: rgb(0, 0, 0);*/">{{advert.name}}</p>
+                        <div style="height: 45px;max-height: 45px;"><a href="{{advert.link}}" style="color: rgb(0,0,0);font-size: 16px;">
+                                <p style="font-size: 18px;max-height: 45px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;line-clamp: 2;-webkit-box-orient: vertical;margin-bottom: 0px;margin-top: 7px;height: 45px;/*color: rgb(0, 0, 0);*/">{{advert.name}}</p>
                             </a>
                             <p style="font-size: 16px;max-height: 23px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;line-clamp: 2;-webkit-box-orient: vertical;margin-bottom: 0px;height: 23px;font-weight: bold;margin-top: 7px;">{{advert.price}}</p>
                         </div>
