--- a/baraholka/templates/index.html
+++ b/baraholka/templates/index.html
@@ -35,7 +35,7 @@
 
 {% block content %}
     <div style="background: #eeeeee;">
-        {% if current_user.is_authenticated %}
+        {% if not current_user.is_authenticated or current_user.isModerator %}
         <div style="background: #ffffff;box-shadow: 0px 0px 10px 0px rgba(80,94,108,0.71);margin-bottom: 1px;">
             <div class="container" style="padding-left: 0px;padding-right: 0px;width: 1050px;">
                 <div class="row" style="margin-left: 0px;margin-right: 0px;">
@@ -47,7 +47,7 @@
                                 {% endfor %}
                                 </select></div>
                             <div class="form-group" style="background: #e3e3e3;border-radius: 99px;border: 2px none #eeeeee;margin-left: 18px;"><button class="btn btn-default barahloka-btn" type="submit" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 99px;border-style: none;text-shadow: 0px 0px;margin-right: 6px;padding-top: 7px;padding-bottom: 7px;padding-left: 15px;padding-right: 14px;margin-left: 0px;display: inline-block;"><img style="width: 23px;height: 23px;display: inline-block;" src="{{url_for('.static', filename='index/assets/img/search-icon.png')}}"></button><input class="form-control search-field" type="search" id="search-field-2" name="search" style="width: 260px;border-radius: 99px;box-shadow: 0px 0px rgba(255,255,255,0);margin-left: 0px;font-size: 15px;height: 38px;display: inline-block;background: #e3e3e3;border-style: none;border-color: #eeeeee;" placeholder="Поиск"></div>
-                        </form><a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 15px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;margin-right: -2px;display: inline-block;margin-left: 18px;" href="/newadvert/">Создать объявление</a><a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 15px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 18px;" href="/login">Профиль</a>
+                        </form><a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 15px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 235px;" href="/login">{% if current_user.isModerator %}Профиль{% else %}Войти{% endif %}</a>
                     </div>
                 </div>
             </div>
@@ -64,17 +64,12 @@
                                 {% endfor %}
                                 </select></div>
                             <div class="form-group" style="background: #e3e3e3;border-radius: 99px;border: 2px none #eeeeee;margin-left: 18px;"><button class="btn btn-default barahloka-btn" type="submit" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 99px;border-style: none;text-shadow: 0px 0px;margin-right: 6px;padding-top: 7px;padding-bottom: 7px;padding-left: 15px;padding-right: 14px;margin-left: 0px;display: inline-block;"><img style="width: 23px;height: 23px;display: inline-block;" src="{{url_for('.static', filename='index/assets/img/search-icon.png')}}"></button><input class="form-control search-field" type="search" id="search-field-2" name="search" style="width: 260px;border-radius: 99px;box-shadow: 0px 0px rgba(255,255,255,0);margin-left: 0px;font-size: 15px;height: 38px;display: inline-block;background: #e3e3e3;border-style: none;border-color: #eeeeee;" placeholder="Поиск"></div>
-                        </form><a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 15px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 235px;" href="/login">Войти</a>
+                        </form><a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 15px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;margin-right: -2px;display: inline-block;margin-left: 18px;" href="/newadvert/">Создать объявление</a><a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 15px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 18px;" href="/login">Профиль</a>
                     </div>
                 </div>
             </div>
         </div>
         {% endif %}
-
-
-
-
-
 
         <div style="margin-top: 20px;">
             <div class="container" style="padding-left: 0px;padding-right: 0px;width: 900px;">
@@ -95,13 +90,20 @@
                 <div class="row" style="margin-left: 0px;margin-right: 0px;">
                     {% for advert in row %}
                     <div class="col-xs-4" style="height: 300px;padding-top: 15px;padding-bottom: 15px;width: 300px;border: 1px solid #e6e6e6;background: #ffffff;">
-                        <div class="text-center" style="max-height: 185px;height: 185px;"><a href="{{advert.link}}">
-                                <img style="width: {{advert.image.w}}px;max-width: 270px;max-height: 185px;height: {{advert.image.h}}px;border: 0px solid #dadada ;" src="{{advert.image.path}}" width="270" height="185">
+                        <div class="text-center" style="max-height: 180px;height: 180px;"><a href="{{advert.link}}">
+                                <img style="width: {{advert.image.w}}px;max-width: 270px;max-height: 180px;height: {{advert.image.h}}px;border: 0px solid #dadada ;" src="{{advert.image.path}}" width="270" height="180">
                         </a></div>
-                        <div style="height: 45px;max-height: 45px;"><a href="{{advert.link}}" style="color: rgb(0,0,0);font-size: 16px;">
-                                <p style="font-size: 18px;max-height: 45px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;line-clamp: 2;-webkit-box-orient: vertical;margin-bottom: 0px;margin-top: 7px;height: 45px;/*color: rgb(0, 0, 0);*/">{{advert.name}}</p>
+                        <div><a href="{{advert.link}}" style="color: rgb(0,0,0);font-size: 16px;">
+                            <p class="text-nowrap" style="font-size: 16px;max-height: 45px;overflow: hidden;text-overflow: ellipsis;/*display: -webkit-box;*//*-webkit-line-clamp: 2;*//*line-clamp: 2;*//*-webkit-box-orient: vertical;*/margin-bottom: 0px;margin-top: 6px;/*color: rgb(0, 0, 0);*/">{{advert.name}}</p>
                             </a>
-                            <p style="font-size: 16px;max-height: 23px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;line-clamp: 2;-webkit-box-orient: vertical;margin-bottom: 0px;height: 23px;font-weight: bold;margin-top: 7px;">{{advert.price}}</p>
+                            <p style="font-size: 16px;max-height: 23px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;line-clamp: 2;-webkit-box-orient: vertical;margin-bottom: 0px;font-weight: bold;margin-top: 6px;">{{advert.price}}</p>
+                            {% if advert.state == 0 %}
+                            <p style="font-size: 16px;max-height: 23px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;line-clamp: 2;-webkit-box-orient: vertical;margin-bottom: 0px;margin-top: 6px;font-weight: bold;text-align: center;background: #ffb800;color: rgb(255,255,255);">Ожидает одобрения</p>
+                            {% elif advert.state == 2 %}
+                            <p style="font-size: 16px;max-height: 23px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;line-clamp: 2;-webkit-box-orient: vertical;margin-bottom: 0px;margin-top: 6px;font-weight: bold;text-align: center;background: #ff3030;color: rgb(255,255,255);">Не одобрено</p>
+                            {% elif advert.state == 3 %}
+                            <p style="font-size: 16px;max-height: 23px;overflow: hidden;text-overflow: ellipsis;display: -webkit-box;-webkit-line-clamp: 2;line-clamp: 2;-webkit-box-orient: vertical;margin-bottom: 0px;margin-top: 6px;font-weight: bold;text-align: center;background: #9f9f9f;color: rgb(255,255,255);">Снято с продажи</p>
+                            {% endif %}
                         </div>
                     </div>
                     {% endfor %}
