--- a/baraholka/templates/profile.html
+++ b/baraholka/templates/profile.html
@@ -39,6 +39,24 @@
 
 {% block content %}
     <div style="background: #eeeeee;">
+        {% if not current_user.is_authenticated or current_user.isModerator %}
+        <div style="background: #ffffff;box-shadow: 0px 0px 10px 0px rgba(80,94,108,0.71);margin-bottom: 1px;">
+            <div class="container" style="padding-left: 0px;padding-right: 0px;width: 1050px;">
+                <div class="row" style="margin-left: 0px;margin-right: 0px;">
+                    <div class="col-lg-12 col-md-12 text-center" style="padding-left: 0px;padding-right: 0px;margin-bottom: 0px;"><a href="/" style="padding-bottom: 0px;padding-top: 0px;margin-left: 0px;display: inline-block;"><img style="height: 64px;width: 170px;margin-left: 0px;display: inline-block;" src="{{url_for('.static', filename='index/assets/img/baraholkaBlack.png')}}"></a>
+                        <form class="form-inline" id="filter-form" target="_self" style="background: rgba(255,255,255,0);padding-right: 0px;padding-left: 0px;display: inline-block;height: 38px;padding-top: 0px;margin-left: 18px;">
+                            <div class="form-group"><select class="form-control" style="display: inline-block;width: 160px;font-size: 14px;background: #e3e3e3;margin-left: 0px;height: 38px;text-align: left;padding-left: 5px;padding-right: 12px;box-shadow: 0px 0px;border-radius: 10px;border-style: none;color: rgb(64,64,64);" name="category" onchange="this.form.submit()">
+                                {% for category in searchCategories %}
+                                <option {{category.selected}}>{{category.name}}</option>
+                                {% endfor %}
+                                </select></div>
+                            <div class="form-group" style="background: #e3e3e3;border-radius: 99px;border: 2px none #eeeeee;margin-left: 18px;"><button class="btn btn-default barahloka-btn" type="submit" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 99px;border-style: none;text-shadow: 0px 0px;margin-right: 6px;padding-top: 7px;padding-bottom: 7px;padding-left: 15px;padding-right: 14px;margin-left: 0px;display: inline-block;"><img style="width: 23px;height: 23px;display: inline-block;" src="{{url_for('.static', filename='index/assets/img/search-icon.png')}}"></button><input class="form-control search-field" type="search" id="search-field-2" name="search" style="width: 260px;border-radius: 99px;box-shadow: 0px 0px rgba(255,255,255,0);margin-left: 0px;font-size: 15px;height: 38px;display: inline-block;background: #e3e3e3;border-style: none;border-color: #eeeeee;" placeholder="Поиск"></div>
+                        </form><a class="btn btn-default text-nowrap barahloka-btn" role="button" style="font-size: 15px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 235px;" href="/login">{% if current_user.isModerator %}Профиль{% else %}Войти{% endif %}</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% else %}
         <div style="background: #ffffff;box-shadow: 0px 0px 10px 0px rgba(80,94,108,0.71);margin-bottom: 1px;">
             <div class="container" style="padding-left: 0px;padding-right: 0px;width: 1050px;">
                 <div class="row" style="margin-left: 0px;margin-right: 0px;">
@@ -55,6 +73,7 @@
                 </div>
             </div>
         </div>
+        {% endif %}
 
         <div style="margin-top: 0px;padding-top: 0px;">
             <section class="login-clean" style="background: rgba(255,255,255,0);padding-bottom: 65px;padding-top: 65px;">
@@ -71,11 +90,16 @@
                         <p style="font-size: 18px;color: rgb(0,0,0);display: inline-block;margin-right: 10px;font-weight: bold;">Email:</p>
                         <p style="font-size: 18px;color: rgb(0,0,0);display: inline-block;">{{user.email}}</p>
                     </div>
-                    <div class="form-group" style="margin-bottom: 15px;">
+                    <div class="form-group" style="margin-bottom: 0px;">
                         <p style="font-size: 18px;color: rgb(0,0,0);display: inline-block;margin-right: 10px;font-weight: bold;">Номер телефона:</p>
                         <p style="font-size: 18px;color: rgb(0,0,0);display: inline-block;">{{user.phone}}</p>
                     </div>
-                    <div class="form-group text-center" style="margin-bottom: 0px;"><a class="btn btn-default barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 0px;" href="#">Редактировать</a><a class="btn btn-default barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 50px;" href="/myadverts/">Мои объявления</a><button class="btn btn-default barahloka-btn" type="submit" name="logout" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 50px;">Выйти</button></div>
+                    {% if user.isModerator %}
+                    <div class="form-group" style="margin-bottom: 0px;">
+                        <p style="font-size: 18px;color: #00a5db;display: inline-block;margin-right: 10px;font-weight: bold;">Вы являетесь модератором</p>
+                    </div>
+                    {% endif %}
+                    <div class="form-group text-center" style="margin-bottom: 0px; margin-top: 15px;"><a class="btn btn-default barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 0px;" href="#">Редактировать</a>{% if not user.isModerator %}<a class="btn btn-default barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 50px;" href="/myadverts/">Мои объявления</a>{% endif %}<button class="btn btn-default barahloka-btn" type="submit" name="logout" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 50px;">Выйти</button></div>
                 </form>
             </section>
         </div>
