--- a/baraholka/templates/adv.html
+++ b/baraholka/templates/adv.html
@@ -30,20 +30,9 @@
     <link rel="stylesheet" href="{{url_for('.static', filename='adv/assets/css/untitled.css')}}">
 {% endblock %}
 
-{% block html_attribs %} lang="en" {% endblock %}
+{% block html_attribs %} lang="ru" {% endblock %}
 
-
-
-
-    {% block title %}advert{% endblock %}
-
-
-
-
-
-
-
-
+{% block title %}{{advert.name}}{% endblock %}
 
 
 
