--- a/baraholka/templates/index.html
+++ b/baraholka/templates/index.html
@@ -19,16 +19,9 @@
     {{super()}}
 {% endblock %}
 
-{% block html_attribs %} lang="en" {% endblock %}
+{% block html_attribs %} lang="ru" {% endblock %}
 
-
-
-
-    {% block title %}main{% endblock %}
-
-
-
-
+{% block title %}Baraholka{% endblock %}
 
 
 
