--- a/baraholka/templates/login.html
+++ b/baraholka/templates/login.html
@@ -20,17 +20,9 @@
     {{super()}}
 {% endblock %}
 
-{% block html_attribs %} lang="en" {% endblock %}
+{% block html_attribs %} lang="ru" {% endblock %}
 
-
-
-
-    {% block title %}login{% endblock %}
-
-
-
-
-
+{% block title %}Вход в аккаунт{% endblock %}
 
 
 
