--- a/baraholka/templates/profile.html
+++ b/baraholka/templates/profile.html
@@ -21,18 +21,9 @@
     {{super()}}
 {% endblock %}
 
-{% block html_attribs %} lang="en" {% endblock %}
+{% block html_attribs %} lang="ru" {% endblock %}
 
-
-
-
-    {% block title %}profile{% endblock %}
-
-
-
-
-
-
+{% block title %}Профиль: {{user.firstname}}{% endblock %}
 
 
 
@@ -99,7 +90,7 @@
                         <p style="font-size: 18px;color: #00a5db;display: inline-block;margin-right: 10px;font-weight: bold;">Вы являетесь модератором</p>
                     </div>
                     {% endif %}
-                    <div class="form-group text-center" style="margin-bottom: 0px; margin-top: 15px;"><a class="btn btn-default barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 0px;" href="#">Редактировать</a>{% if not user.isModerator %}<a class="btn btn-default barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 50px;" href="/myadverts/">Мои объявления</a>{% endif %}<button class="btn btn-default barahloka-btn" type="submit" name="logout" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 50px;">Выйти</button></div>
+                    <div class="form-group text-center" style="margin-bottom: 0px; margin-top: 15px;">{% if not user.isModerator %}<a class="btn btn-default barahloka-btn" role="button" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-right: 50px;" href="/myadverts/">Мои объявления</a>{% endif %}<button class="btn btn-default barahloka-btn" type="submit" name="logout" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;">Выйти</button></div>
                 </form>
             </section>
         </div>
