--- a/baraholka/templates/register.html
+++ b/baraholka/templates/register.html
@@ -20,17 +20,9 @@
     {{super()}}
 {% endblock %}
 
-{% block html_attribs %} lang="en" {% endblock %}
+{% block html_attribs %} lang="ru" {% endblock %}
 
-
-
-
-    {% block title %}login{% endblock %}
-
-
-
-
-
+{% block title %}Регистрация{% endblock %}
 
 
 
@@ -46,8 +38,8 @@
                 <div class="form-group"><input class="form-control" type="text" name="lastname" placeholder="Фамилия" value="{{prefilledLastname}}" style="font-size: 16px;background: #efefef;" required></div>
                 <div class="form-group"><input class="form-control" type="email" name="email" placeholder="Email" value="{{prefilledEmail}}" style="font-size: 16px;background: #efefef;" required></div>
                 <div class="form-group"><input class="form-control" type="text" name="phone" placeholder="Номер телефона" value="{{prefilledPhone}}" style="font-size: 16px;background: #efefef;" required></div>
-                <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Пароль" style="font-size: 16px;background: #efefef;color: rgb(80, 94, 108);" required></div>
-                <div class="form-group"><input class="form-control" type="password" name="password2" placeholder="Повторите пароль" style="font-size: 16px;background: #efefef;color: rgb(80, 94, 108);" required></div>
+                <div class="form-group"><input class="form-control" type="password" name="password" placeholder="Пароль" style="font-size: 16px;background: #efefef;color: rgb(80, 94, 108);" minlength="8" required></div>
+                <div class="form-group"><input class="form-control" type="password" name="password2" placeholder="Повторите пароль" style="font-size: 16px;background: #efefef;color: rgb(80, 94, 108);" minlength="8" required></div>
                 <div class="form-group text-center"><button class="btn btn-default barahloka-btn" type="submit" style="font-size: 16px;color: rgb(255,255,255);background: #00a5db;border-radius: 12px;padding-top: 8px;padding-bottom: 8px;padding-right: 16px;padding-left: 16px;border-style: none;text-shadow: 0px 0px;display: inline-block;margin-left: 0px;width: 240px;">Зарегистрироваться</button></div><a class="forgot" href="/login">Уже зарегистрированы? Войдите в аккаунт</a>
             </form>
         </section>
